--- a/DESCRIPTION.en_us.html
+++ b/DESCRIPTION.en_us.html
@@ -1,1 +1,4 @@
-<p>The Galindo typeface is an inspired spin off light-hearted animated fonts with geometric counters.</p>
+<p>
+  The Galindo typeface is an inspired spin off light-hearted animated fonts with geometric counters.
+</p>
+
